--- a/meta-pkgs/texlive-collection-langarabic/Makefile
+++ b/meta-pkgs/texlive-collection-langarabic/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2016/06/16 04:03:14 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/22 09:37:21 markd Exp $
 
 DISTNAME=	collection-langarabic
-PKGNAME=	texlive-${DISTNAME}-2016pre1
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	40201
+TEXLIVE_REV=	44496
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -12,6 +12,7 @@ COMMENT=	Arabic TeX packages
 
 DEPENDS+=	texlive-collection-basic-[0-9]*:../../meta-pkgs/texlive-collection-basic
 
+# depend alkalami
 # depend amiri
 DEPENDS+=	tex-arabi-[0-9]*:../../print/tex-arabi
 # depend arabi-add
@@ -28,6 +29,7 @@ DEPENDS+=	tex-hyphen-farsi-[0-9]*:../../print/tex-hyphen-farsi
 # depend persian-bib
 # depend simurgh
 # depend tram
+# depend xepersian
 
 META_PACKAGE=	yes
 
