--- a/meta-pkgs/texlive-collection-langgerman/Makefile
+++ b/meta-pkgs/texlive-collection-langgerman/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2017/01/20 23:35:18 markd Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/22 09:37:21 markd Exp $
 
 DISTNAME=	collection-langgerman
-PKGNAME=	texlive-${DISTNAME}-2016
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	41610
+TEXLIVE_REV=	42045
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -12,6 +12,7 @@ COMMENT=	German TeX packages
 
 DEPENDS+=	texlive-collection-basic>=2014:../../meta-pkgs/texlive-collection-basic
 
+# depend apalike-german
 DEPENDS+=	tex-babel-german-[0-9]*:../../print/tex-babel-german
 DEPENDS+=	tex-bibleref-german-[0-9]*:../../print/tex-bibleref-german
 # booktabs-de is documentation only
