--- a/meta-pkgs/texlive-collection-langjapanese/Makefile
+++ b/meta-pkgs/texlive-collection-langjapanese/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2017/03/26 20:11:58 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/22 09:37:22 markd Exp $
 
 DISTNAME=	collection-langjapanese
-PKGNAME=	texlive-${DISTNAME}-2016pre2
+PKGNAME=	texlive-${DISTNAME}-2017pre2
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	41002
+TEXLIVE_REV=	44554
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -12,23 +12,31 @@ COMMENT=	Japanese TeX packages
 
 DEPENDS+=	texlive-collection-langcjk-[0-9]*:../../meta-pkgs/texlive-collection-langcjk
 
+# depend babel-japanese
 # depend bxbase
 # depend bxcjkjatype
+# depend bxjalipsum
+# depend bxjaprnind
 # depend bxjscls
+# depend bxorigcapt
 # depend convbkmk
+# depend ifptex
 DEPENDS+=	tex-ipaex-[0-9]*:../../fonts/tex-ipaex
-DEPENDS+=	tex-japanese-[0-9]*:../../print/tex-japanese
 DEPENDS+=	tex-japanese-otf-[0-9]*:../../fonts/tex-japanese-otf
 # depend japanese-otf-uptex
-# depend jfontmaps
+# depend jlreq
 DEPENDS+=	tex-jsclasses-[0-9]*:../../print/tex-jsclasses
 # lshort-japanese is documentation only
 # depend luatexja
+# depend mendex-doc
 DEPENDS+=	tex-pbibtex-base-[0-9]*:../../print/tex-pbibtex-base
 DEPENDS+=	tex-platex-[0-9]*:../../print/tex-platex
+# depend platex-tools
+# depend platexcheat
 DEPENDS+=	tex-ptex-[0-9]*:../../print/tex-ptex
 DEPENDS+=	tex-ptex-base-[0-9]*:../../print/tex-ptex-base
 DEPENDS+=	tex-ptex-fonts-[0-9]*:../../fonts/tex-ptex-fonts
+# depend ptex-fontmaps
 # depend ptex2pdf
 # depend pxbase
 # depend pxchfon
