--- a/meta-pkgs/texlive-collection-latexrecommended/Makefile
+++ b/meta-pkgs/texlive-collection-latexrecommended/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2016/08/07 11:22:03 markd Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/22 09:37:22 markd Exp $
 
 DISTNAME=	collection-latexrecommended
-PKGNAME=	texlive-${DISTNAME}-2016.41452
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	41452
+TEXLIVE_REV=	44177
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -28,17 +28,21 @@ DEPENDS+=	tex-extsizes-[0-9]*:../../print/tex-extsizes
 DEPENDS+=	tex-fancybox-[0-9]*:../../print/tex-fancybox
 DEPENDS+=	tex-fancyref-[0-9]*:../../print/tex-fancyref
 DEPENDS+=	tex-fancyvrb-[0-9]*:../../print/tex-fancyvrb
+# depend filehook
 DEPENDS+=	tex-float-[0-9]*:../../print/tex-float
 DEPENDS+=	tex-fontspec-[0-9]*:../../fonts/tex-fontspec
 DEPENDS+=	tex-fp-[0-9]*:../../math/tex-fp
 DEPENDS+=	tex-index-[0-9]*:../../print/tex-index
 DEPENDS+=	tex-jknapltx-[0-9]*:../../print/tex-jknapltx
 DEPENDS+=	tex-koma-script-[0-9]*:../../print/tex-koma-script
+# depend latexbug
+DEPENDS+=	tex-l3experimental-[0-9]*:../../devel/tex-l3experimental
 DEPENDS+=	tex-l3kernel-[0-9]*:../../devel/tex-l3kernel
 DEPENDS+=	tex-l3packages-[0-9]*:../../devel/tex-l3packages
-DEPENDS+=	tex-l3experimental-[0-9]*:../../devel/tex-l3experimental
 DEPENDS+=	tex-lineno-[0-9]*:../../print/tex-lineno
 DEPENDS+=	tex-listings-[0-9]*:../../print/tex-listings
+# depend lwarp
+# depend mathspec
 DEPENDS+=	tex-mathtools-[0-9]*:../../print/tex-mathtools
 DEPENDS+=	tex-mdwtools-[0-9]*:../../print/tex-mdwtools
 DEPENDS+=	tex-memoir-[0-9]*:../../print/tex-memoir
@@ -48,6 +52,7 @@ DEPENDS+=	tex-ms-[0-9]*:../../print/tex-ms
 DEPENDS+=	tex-ntgclass-[0-9]*:../../print/tex-ntgclass
 DEPENDS+=	tex-parskip-[0-9]*:../../print/tex-parskip
 DEPENDS+=	tex-pdfpages-[0-9]*:../../print/tex-pdfpages
+DEPENDS+=	tex-polyglossia-[0-9]*:../../print/tex-polyglossia
 DEPENDS+=	tex-powerdot-[0-9]*:../../print/tex-powerdot
 DEPENDS+=	tex-psfrag-[0-9]*:../../print/tex-psfrag
 DEPENDS+=	tex-rcs-[0-9]*:../../print/tex-rcs
@@ -61,8 +66,11 @@ DEPENDS+=	tex-textcase-[0-9]*:../../print/tex-textcase
 DEPENDS+=	tex-thumbpdf-[0-9]*:../../print/tex-thumbpdf
 DEPENDS+=	tex-typehtml-[0-9]*:../../print/tex-typehtml
 DEPENDS+=	tex-underscore-[0-9]*:../../print/tex-underscore
+# depend unicode-math
 DEPENDS+=	tex-xcolor-[0-9]*:../../print/tex-xcolor
 DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
+DEPENDS+=	tex-xltxtra-[0-9]*:../../print/tex-xltxtra
+DEPENDS+=	tex-xunicode-[0-9]*:../../print/tex-xunicode
 
 META_PACKAGE=	yes
 
