--- a/meta-pkgs/texlive-collection-pstricks/Makefile
+++ b/meta-pkgs/texlive-collection-pstricks/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2016/07/09 06:38:35 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/22 09:37:23 markd Exp $
 
 DISTNAME=	collection-pstricks
-PKGNAME=	texlive-${DISTNAME}-2016pre1
-PKGREVISION=	1
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	40724
+TEXLIVE_REV=	44460
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -13,6 +12,7 @@ COMMENT=	PSTricks TeX packages
 
 DEPENDS+=	texlive-collection-basic-[0-9]*:../../meta-pkgs/texlive-collection-basic
 DEPENDS+=	texlive-collection-genericrecommended-[0-9]*:../../meta-pkgs/texlive-collection-genericrecommended
+#DEPENDS+=	texlive-collection-plaingeneric-[0-9]*:../../meta-pkgs/texlive-collection-plaingeneric
 
 DEPENDS+=	tex-auto-pst-pdf-[0-9]*:../../graphics/tex-auto-pst-pdf
 DEPENDS+=	tex-bclogo-[0-9]*:../../graphics/tex-bclogo
@@ -26,6 +26,7 @@ DEPENDS+=	tex-pst-2dplot-[0-9]*:../../graphics/tex-pst-2dplot
 DEPENDS+=	tex-pst-3d-[0-9]*:../../graphics/tex-pst-3d
 DEPENDS+=	tex-pst-3dplot-[0-9]*:../../graphics/tex-pst-3dplot
 # depend pst-abspos
+# depend pst-arrow
 # depend pst-am
 # depend pst-asr
 # depend pst-bar
@@ -83,12 +84,14 @@ DEPENDS+=	tex-pst-poly-[0-9]*:../../graphics/tex-pst-poly
 # depend pst-pulley
 # depend pst-qtree
 # depend pst-rubans
+# depend pst-shell
 # depend pst-sigsys
 DEPENDS+=	tex-pst-slpe-[0-9]*:../../graphics/tex-pst-slpe
 # depend pst-solarsystem
 # depend pst-solides3d
 # depend pst-soroban
 # depend pst-spectra
+# depend pst-spinner
 # depend pst-spirograph
 # depend pst-stru
 # depend pst-support
@@ -100,12 +103,14 @@ DEPENDS+=	tex-pst-tree-[0-9]*:../../graphics/tex-pst-tree
 DEPENDS+=	tex-pst-uml-[0-9]*:../../devel/tex-pst-uml
 # depend pst-uml
 # depend pst-vectorian
+# depend pst-vehicle
 # depend pst-vowel
 DEPENDS+=	tex-pst-vue3d-[0-9]*:../../graphics/tex-pst-vue3d
 # depend pst2pdf
 DEPENDS+=	tex-pstricks-[0-9]*:../../graphics/tex-pstricks
 DEPENDS+=	tex-pstricks-add-[0-9]*:../../graphics/tex-pstricks-add
 # depend pstricks_calcnotes
+# depend rputover
 # depend uml
 # depend vaucanson-g
 # depend vocaltract
