--- a/meta-pkgs/texlive-collection-xetex/Makefile
+++ b/meta-pkgs/texlive-collection-xetex/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2016/08/07 11:33:39 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/22 09:37:23 markd Exp $
 
 DISTNAME=	collection-xetex
-PKGNAME=	texlive-${DISTNAME}-2016pre2
+PKGNAME=	texlive-${DISTNAME}-2017pre1
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
-TEXLIVE_REV=	41611
+TEXLIVE_REV=	43059
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
@@ -13,6 +13,7 @@ COMMENT=	XeTeX and packages
 DEPENDS+=	texlive-collection-basic-[0-9]*:../../meta-pkgs/texlive-collection-basic
 
 # depend arabxetex
+# depend awesomebox
 # depend bidi-atbegshi
 # depend bidicontour
 # depend bidipagegrid
@@ -23,20 +24,21 @@ DEPENDS+=	texlive-collection-basic-[0-9]*:../../meta-pkgs/texlive-collection-bas
 # depend fontbook
 # depend fontwrap
 # depend interchar
-# depend mathspec
 # depend philokalia
 DEPENDS+=	tex-polyglossia-[0-9]*:../../print/tex-polyglossia
 # depend ptext
 # depend quran
 DEPENDS+=	tex-realscripts-[0-9]*:../../print/tex-realscripts
+# depend simple-resume-cv
+# depend simple-thesis-dissertation
 # depend ucharclasses
+# depend unicode-bidi
 # depend unisugar
 # depend xebaposter
 # depend xecjk
 # depend xecolor
 # depend xecyr
 # depend xeindex
-# depend xepersian
 # depend xesearch
 # depend xespotcolor
 DEPENDS+=	tex-xetex-[0-9]*:../../print/tex-xetex
@@ -47,8 +49,6 @@ DEPENDS+=	tex-xetexconfig-[0-9]*:../../print/tex-xetexconfig
 # depend xetexfontinfo
 # depend xetexko
 # depend xevlna
-DEPENDS+=	tex-xltxtra-[0-9]*:../../print/tex-xltxtra
-DEPENDS+=	tex-xunicode-[0-9]*:../../print/tex-xunicode
 
 META_PACKAGE=	yes
 
